--- a/ficha_defecto.html
+++ b/ficha_defecto.html
@@ -1,172 +1,227 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ficha PDF por nivel</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>De ejercicio a Ficha PDF</title>
+<link rel="icon" type="image/png" href="logo.png">
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<style>
+canvas {
+    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    max-width: 100%;
+    height: auto;
+    border-radius: 0.75rem;
+    transition: transform 0.3s;
+}
+.loader {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3b82f6;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    animation: spin 1s linear infinite;
+}
+@keyframes spin { 100% { transform: rotate(360deg); } }
+</style>
 </head>
 
-<body class="bg-gray-50 w-screen h-screen flex flex-col transition-colors duration-[3000ms] ease-in-out">
+<body class="bg-gray-50 h-screen w-screen overflow-x-hidden font-sans flex flex-col">
 
-  <!-- HEADER -->
-  <header id="header" class="bg-green-600 p-6 text-center shadow-md transition-colors duration-[3000ms]">
-    <h1 class="text-3xl font-bold text-white flex items-center justify-center">
-      <i class="fa-solid fa-graduation-cap mr-2"></i>Ficha de ejercicios
+<!-- HEADER -->
+<div class="bg-gradient-to-r from-blue-600 to-blue-500 p-4 text-center shadow-lg flex-none">
+    <h1 class="text-2xl md:text-3xl font-extrabold text-white flex justify-center items-center">
+        <i class="fa-solid fa-file-pdf mr-2"></i>Foto a Ficha PDF
     </h1>
-    <p id="subtitulo" class="text-green-100 mt-1">Selecciona curso y dificultad</p>
-  </header>
+    <p class="text-blue-100 text-xs md:text-sm">Sube una imagen y genera tu PDF</p>
+</div>
 
-  <!-- MAIN -->
-  <main class="w-full max-w-6xl mx-auto p-8 flex-grow flex flex-col mb-16">
+<div class="flex-grow flex flex-col items-center p-4 w-full max-w-6xl mx-auto">
 
-    <!-- FORMULARIO -->
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
-      <div>
-        <label class="block font-bold mb-2 text-gray-700">Curso</label>
-        <input id="curso" class="w-full p-4 border rounded-xl">
-      </div>
+    <div class="w-full flex flex-col flex-grow">
 
-      <div>
-        <label class="block font-bold mb-2 text-gray-700">Nivel</label>
-        <select id="nivel" onchange="cambiarNivel()" class="w-full p-4 border rounded-xl font-bold">
-          <option value="">Selecciona nivel</option>
-          <option value="facil">Fácil</option>
-          <option value="medio">Medio</option>
-          <option value="dificil">Difícil</option>
-        </select>
-      </div>
+        <label class="block text-lg font-semibold mb-2 text-gray-700 text-center">
+            Selecciona una imagen
+        </label>
+        
+        <!-- DROPZONE -->
+        <div onclick="photoInput.click()" id="dropZone"
+             class="group w-full min-h-[60vh] flex flex-col justify-center items-center
+                    border-4 border-dashed border-gray-300 rounded-3xl cursor-pointer
+                    bg-white hover:bg-blue-50 hover:border-blue-400
+                    transition-all duration-500">
+
+            <input type="file" id="photoInput" accept="image/*" class="hidden">
+
+            <!-- ICONO NUEVO -->
+            <div class="text-7xl md:text-9xl text-gray-300 mb-6
+                        transition-all duration-500 transform
+                        group-hover:text-blue-600
+                        group-hover:scale-110">
+                <i class="fa-solid fa-file-arrow-up"></i>
+            </div>
+
+            <p id="fileName"
+               class="text-gray-500 text-xl md:text-2xl font-medium
+                      transition-colors duration-500
+                      group-hover:text-blue-700">
+                Toca aquí para subir o tomar foto
+            </p>
+        </div>
+
+        <!-- CANVAS -->
+        <div id="canvasContainer"
+             class="hidden w-full min-h-[60vh] bg-gray-100 p-4 rounded-3xl
+                    shadow-inner flex items-center justify-center relative
+                    border border-gray-200">
+            <canvas id="miCanvas" class="bg-white"></canvas>
+            
+            <button onclick="resetInput()"
+                class="absolute top-4 right-4 bg-white text-gray-700
+                       px-4 py-2 rounded-full shadow-lg font-bold
+                       hover:bg-gray-100 transition">
+                <i class="fa-solid fa-rotate-right mr-2"></i> Cambiar
+            </button>
+        </div>
+
+        <!-- BOTÓN -->
+        <button id="sendBtn" disabled
+            class="mt-6 w-full max-w-3xl mx-auto
+                   bg-blue-600 text-white py-5 rounded-2xl
+                   font-bold text-xl shadow-lg
+                   hover:bg-blue-700 hover:shadow-xl
+                   transform active:scale-95
+                   transition-all duration-200
+                   disabled:opacity-50 disabled:cursor-not-allowed"
+            onclick="enviar()">
+            Generar PDF
+        </button>
+
+        <div id="status"
+             class="hidden mt-4 text-center p-4 rounded-xl font-medium
+                    max-w-3xl mx-auto w-full"></div>
+
+        <div id="downloadContainer"
+             class="hidden mt-4 text-center max-w-3xl mx-auto w-full"></div>
+
     </div>
 
-    <!-- DROPZONE -->
-    <div id="dropZone"
-      class="group w-full flex-grow flex flex-col justify-center items-center
-             border-4 border-dashed border-green-400 rounded-2xl p-6 cursor-pointer
-             bg-white transition-all duration-[3000ms] shadow-sm
-             hover:bg-gradient-to-br hover:from-green-100 hover:to-green-200">
+</div>
 
-      <!-- ICONO -->
-      <div id="iconoDrop"
-        class="text-6xl md:text-8xl text-green-600 mb-6
-               transition-all duration-[3000ms] transform
-               group-hover:scale-110">
-        <i class="fa-solid fa-file-arrow-up"></i>
-      </div>
+<footer class="p-3 text-center text-xs text-gray-400 bg-gray-100 flex-none">
+    DLP Academy Tool
+</footer>
 
-      <p id="fileName" class="text-2xl font-medium text-center px-4 transition-colors duration-[3000ms]">
-        Toca para subir una imagen de los ejercicios
-      </p>
+<script>
+const N8N_WEBHOOK_URL = "https://podzolic-dorethea-rancorously.ngrok-free.dev/webhook-test/711e538b-9d63-42bb-8494-873301ffdf39";
+const canvas = document.getElementById("miCanvas");
+const ctx = canvas.getContext("2d");
+const sendBtn = document.getElementById("sendBtn");
+const status = document.getElementById("status");
+const fileName = document.getElementById("fileName");
+const downloadContainer = document.getElementById("downloadContainer");
+const photoInput = document.getElementById("photoInput");
+const dropZone = document.getElementById("dropZone");
+const canvasContainer = document.getElementById("canvasContainer");
 
-      <input type="file" id="fileInput" accept="image/*" multiple hidden>
-    </div>
+function resetInput() {
+    photoInput.value = '';
+    canvasContainer.classList.add("hidden");
+    dropZone.classList.remove("hidden");
+    sendBtn.disabled = true;
+    fileName.textContent = "Toca aquí para subir o tomar foto";
+    status.classList.add("hidden");
+    downloadContainer.classList.add("hidden");
+}
 
-    <!-- BOTÓN -->
-    <div class="text-center mt-8">
-      <button id="btnEnviar" onclick="enviarAN8N()"
-        class="bg-green-600 hover:bg-green-700
-               text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg
-               transition-colors duration-[3000ms]">
-        Generar PDF
-      </button>
-    </div>
+photoInput.onchange = e => {
+    const file = e.target.files[0];
+    if (!file) return;
 
-  </main>
+    fileName.textContent = file.name;
+    const reader = new FileReader();
+    reader.onload = ev => {
+        const img = new Image();
+        img.onload = () => {
+            const max = 1600;
+            let w = img.width, h = img.height;
+            if (w > max) { h *= max / w; w = max; }
+            canvas.width = w;
+            canvas.height = h;
+            ctx.drawImage(img, 0, 0, w, h);
 
-  <!-- FOOTER siempre visible -->
-  <footer class="fixed bottom-0 left-0 w-full p-3 text-center text-xs text-gray-400 bg-gray-100 shadow-inner">
-    © 2025 DLP Academy Tool
-  </footer>
+            dropZone.classList.add("hidden");
+            canvasContainer.classList.remove("hidden");
+            sendBtn.disabled = false;
+        };
+        img.src = ev.target.result;
+    };
+    reader.readAsDataURL(file);
+};
 
-  <script>
-  const header = document.getElementById("header");
-  const subtitulo = document.getElementById("subtitulo");
-  const dropZone = document.getElementById("dropZone");
-  const iconoDrop = document.getElementById("iconoDrop");
-  const fileInput = document.getElementById("fileInput");
-  const fileName = document.getElementById("fileName");
-  const btnEnviar = document.getElementById("btnEnviar");
+async function enviar() {
+    sendBtn.innerHTML = `<span class="loader inline-block mr-2 align-middle"></span> Procesando...`;
+    sendBtn.disabled = true;
+    downloadContainer.classList.add("hidden");
 
-  let archivos = [];
+    canvas.toBlob(async blob => {
+        const fd = new FormData();
+        fd.append("data", blob, "imagen.jpg");
 
-  const temas = {
-    defecto: { header: "bg-green-600", drop: "border-green-400 hover:bg-gradient-to-br hover:from-green-100 hover:to-green-200", icono: "text-green-600", boton: "bg-green-600 hover:bg-green-700", texto: "Selecciona curso y dificultad" },
-    facil: { header: "bg-green-600", drop: "border-green-400 hover:bg-gradient-to-br hover:from-green-100 hover:to-green-200", icono: "text-green-600", boton: "bg-green-600 hover:bg-green-700", texto: "Nivel fácil" },
-    medio: { header: "bg-yellow-500", drop: "border-yellow-400 hover:bg-gradient-to-br hover:from-yellow-100 hover:to-yellow-200", icono: "text-yellow-600", boton: "bg-yellow-500 hover:bg-yellow-600", texto: "Nivel medio" },
-    dificil: { header: "bg-red-600", drop: "border-red-400 hover:bg-gradient-to-br hover:from-red-100 hover:to-red-200", icono: "text-red-600", boton: "bg-red-600 hover:bg-red-700", texto: "Nivel difícil" }
-  };
+        try {
+            const res = await fetch(N8N_WEBHOOK_URL, {
+                method: "POST",
+                body: fd
+            });
+            if (!res.ok) throw "n8n no respondió";
 
-  function cambiarNivel() {
-    const nivel = document.getElementById("nivel").value;
-    const tema = temas[nivel] || temas.defecto;
+            const data = await res.blob();
+            descargar(data, "Documento.pdf");
+            crearBotonDescarga(data, "Documento.pdf");
+            mensaje("¡PDF listo! La descarga comenzará automáticamente.");
+        } catch (e) {
+            mensaje("Error: Verifica que n8n esté activo.", false);
+            console.error(e);
+        } finally {
+            sendBtn.innerHTML = "Generar PDF";
+            sendBtn.disabled = false;
+        }
+    }, "image/jpeg", 0.85);
+}
 
-    header.className = `p-6 text-center shadow-md transition-colors duration-[3000ms] ${tema.header}`;
-    subtitulo.textContent = tema.texto;
+function descargar(blob, nombre) {
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = nombre;
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+    URL.revokeObjectURL(url);
+}
 
-    dropZone.className = `
-      group w-full flex-grow flex flex-col justify-center items-center
-      border-4 border-dashed rounded-2xl p-6 cursor-pointer
-      bg-white transition-all duration-[3000ms] shadow-sm
-      ${tema.drop}
-    `;
+function crearBotonDescarga(blob, nombre) {
+    downloadContainer.innerHTML = "";
+    const btn = document.createElement("button");
+    btn.innerHTML = '<i class="fa-solid fa-download mr-2"></i> Descargar PDF nuevamente';
+    btn.className = "mt-4 w-full bg-green-600 text-white py-4 rounded-xl font-bold text-lg shadow-md hover:bg-green-700 transition-all";
+    btn.onclick = () => descargar(blob, nombre);
+    downloadContainer.appendChild(btn);
+    downloadContainer.classList.remove("hidden");
+}
 
-    iconoDrop.className = `
-      text-6xl md:text-8xl mb-6 transform
-      transition-all duration-[3000ms]
-      group-hover:scale-110
-      ${tema.icono}
-    `;
-
-    btnEnviar.className = `
-      ${tema.boton}
-      text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg
-      transition-colors duration-[3000ms]
-    `;
-  }
-
-  dropZone.addEventListener("click", () => fileInput.click());
-
-  fileInput.addEventListener("change", () => {
-    archivos = [...fileInput.files];
-    fileName.textContent = archivos.length
-      ? `${archivos.length} imagen(es) seleccionada(s)`
-      : "Toca para subir una imagen de los ejercicios";
-  });
-
-  function enviarAN8N() {
-    const curso = document.getElementById("curso").value;
-    const nivel = document.getElementById("nivel").value;
-
-    if (!curso || !nivel || archivos.length === 0) {
-      alert("Completa todos los campos y sube al menos una imagen.");
-      return;
-    }
-
-    const formData = new FormData();
-    formData.append("curso", curso);
-    formData.append("nivel", nivel);
-
-    archivos.forEach((file, i) => {
-      formData.append(`imagen_${i}`, file);
-    });
-
-    fetch("https://podzolic-dorethea-rancorously.ngrok-free.dev/webhook/711e538b-9d63-42bb-8494-873301ffdf39", {
-      method: "POST",
-      body: formData
-    })
-    .then(res => res.blob())
-    .then(blob => {
-      const url = window.URL.createObjectURL(blob);
-      window.open(url);
-    })
-    .catch(err => {
-      console.error(err);
-      alert("Error al generar el PDF");
-    });
-  }
-  </script>
+function mensaje(txt, ok = true) {
+    status.innerHTML = txt;
+    status.className = `mt-4 text-base text-center p-4 rounded-xl font-medium shadow-sm ${
+        ok
+        ? "bg-green-100 text-green-800 border border-green-200"
+        : "bg-red-100 text-red-800 border border-red-200"
+    }`;
+    status.classList.remove("hidden");
+}
+</script>
 
 </body>
 </html>
-
